6817
The problem is that the error you see halts compilation before the error you should see is ever emitted, that being what you see if you comment out the override of bar in C:
{noformat}

./a.scala:23: error: overriding type Foo in class B, which equals BFoo;
 type Foo has incompatible type
  override type Foo = CFoo
                ^
{noformat}
